--- a/indec.html
+++ b/indec.html
@@ -40,7 +40,7 @@
                     </div>
                 </div>
                 <div class="pervactranica__image _ibg">
-                    <img src="/img/title/cover.jpg" alt="cror">
+                    <img src="./img/title/cover.jpg" alt="cror">
                 </div>
             </div>
             <section class="page__services services">
