--- a/index.html
+++ b/index.html
@@ -124,6 +124,89 @@
                     </div>
                 </div>
             </section>
+            <section class="page__practice practice">
+                <div class="practice____container _container">
+                    <div class="practice__heading heading-bloc">
+                        <div class="practice__title _title">Practice Advice</div>
+                        <div class="practice__text _text">Problems trying to resolve the conflict between <br>
+                            the two major realms of Classical physics: Newtonian mechanics
+                        </div>
+                    </div>
+                    <div class="practice__body">
+                        <div class="practice__column">
+                            <div class="practice__item item-practice">
+                                <div class="item-practice__content">
+                                    <a href="" class="item-practice__link">
+                                        <div class="item-practice__title">A single source
+                                            of truth</div>
+                                    </a>
+                                    <div class="item-practice__text">Newton thought that
+                                        light was made up of
+                                        particles, but then it
+                                        was discovered</div>
+                                </div>
+                                <a href="" class="item-practice__image _ibg">
+                                    <img src="./img/practice/media1.png" alt="A single source
+                                    of truth">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="practice__column">
+                            <div class="practice__item item-practice">
+                                <div class="item-practice__content">
+                                    <a href="" class="item-practice__link">
+                                        <div class="item-practice__title">Fastest way to
+                                            organize</div>
+                                    </a>
+                                    <div class="item-practice__text">“Quantum mechanics”
+                                        is the description of the
+                                        behaviour of matter</div>
+                                </div>
+                                <a href="" class="item-practice__image _ibg">
+                                    <img src="./img/practice/media2.png" alt="A single source
+                                    of truth">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="practice__column">
+                            <div class="practice__item item-practice">
+                                <div class="item-practice__content">
+                                    <a href="" class="item-practice__link">
+                                        <div class="item-practice__title">Fastest way to
+                                            take action</div>
+                                    </a>
+                                    <div class="item-practice__text">They describe a
+                                        universe consisting of
+                                        bodies moving</div>
+                                </div>
+                                <a href="" class="item-practice__image _ibg">
+                                    <img src="./img/practice/media3.png" alt="A single source
+                                    of truth">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="practice__column">
+                            <div class="practice__item item-practice">
+                                <div class="item-practice__content">
+                                    <a href="" class="item-practice__link">
+                                        <div class="item-practice__title">Work better
+                                            together</div>
+                                    </a>
+                                    <div class="item-practice__text">They finally obtained
+                                        a consistent description
+                                        of the behaviour </div>
+                                </div>
+                                <a href="" class="item-practice__image _ibg">
+                                    <img src="./img/practice/media4.png" alt="A single source
+                                    of truth">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </section>
+
         </main>
 
 
