--- a/index.html
+++ b/index.html
@@ -206,6 +206,39 @@
 
                 </div>
             </section>
+            <section class="page__whoweare whoweare">
+                <div class="whoweare__container_container">
+                    <div class="whoweare__heading heading-bloc">
+                        <div class="whoweare__title _title">Who We Are</div>
+                        <div class="whoweare__text _text">Problems trying to resolve the conflict between the two major
+                            realms<br>
+                            of Classical physics: Newtonian mechanics
+                        </div>
+                    </div>
+                    <div class="whoweare__body">
+                        <div class="whoweare__video"></div>
+                        <div class="whoweare__content">
+                            <div class="whoweare__title _title">Most trusted in
+                                our field</div>
+                            <div class="whoweare__text _text">Most calendars are designed for teams. Slate
+                                is designed for freelancers who want a
+                                simple way to plan their schedule.</div>
+                            <div class="whoweare__items">
+                                <div class="whoweare__item item-whoweare">
+                                    <div class="item-whoweare__icon">
+                                        <img src="./img/whoweare/icon1.svg" alt="quick fox">
+                                    </div>
+                                    <div class="item-whoweare__body">
+                                        <div class="item-whoweare__title">the quick fox jumps over the lazy
+                                            dog</div>
+                                        <div class="item-whoweare__text">Things on a very small scale ...</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
 
         </main>
 
