--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                 </div>
             </section>
             <section class="page__whoweare whoweare">
-                <div class="whoweare__container_container">
+                <div class="whoweare__container _container">
                     <div class="whoweare__heading heading-bloc">
                         <div class="whoweare__title _title">Who We Are</div>
                         <div class="whoweare__text _text">Problems trying to resolve the conflict between the two major
@@ -216,7 +216,14 @@
                         </div>
                     </div>
                     <div class="whoweare__body">
-                        <div class="whoweare__video"></div>
+                        <div class="whoweare__video">
+
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/UalTfOIDQ7M"
+                                title="YouTube video player" frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                allowfullscreen></iframe>
+
+                        </div>
                         <div class="whoweare__content">
                             <div class="whoweare__title _title">Most trusted in
                                 our field</div>
@@ -227,6 +234,18 @@
                                 <div class="whoweare__item item-whoweare">
                                     <div class="item-whoweare__icon">
                                         <img src="./img/whoweare/icon1.svg" alt="quick fox">
+                                    </div>
+                                    <div class="item-whoweare__body">
+                                        <div class="item-whoweare__title">the quick fox jumps over the lazy
+                                            dog</div>
+                                        <div class="item-whoweare__text">Things on a very small scale ...</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="whoweare__items">
+                                <div class="whoweare__item item-whoweare">
+                                    <div class="item-whoweare__icon">
+                                        <img src="./img/whoweare/icon2.svg" alt="quick fox">
                                     </div>
                                     <div class="item-whoweare__body">
                                         <div class="item-whoweare__title">the quick fox jumps over the lazy
