--- a/index.html
+++ b/index.html
@@ -225,11 +225,13 @@
 
                         </div>
                         <div class="whoweare__content">
-                            <div class="whoweare__title _title">Most trusted in
-                                our field</div>
-                            <div class="whoweare__text _text">Most calendars are designed for teams. Slate
-                                is designed for freelancers who want a
-                                simple way to plan their schedule.</div>
+                            <div class="whoweare__top">
+                                <div class="whoweare__title _title">Most trusted in
+                                    our field</div>
+                                <div class="whoweare__text _text">Most calendars are designed for teams. Slate
+                                    is designed for freelancers who want a
+                                    simple way to plan their schedule.</div>
+                            </div>
                             <div class="whoweare__items">
                                 <div class="whoweare__item item-whoweare">
                                     <div class="item-whoweare__icon">
@@ -255,6 +257,42 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </section>
+            <div class="page__clients clients">
+                <div class="clients__container _container">
+                    <div class="clients__items">
+                        <div class="clients__item">
+                            <img src="./img/clients/fa1.png" alt="">
+                        </div>
+                        <div class="clients__item">
+                            <img src="./img/clients/fa2.png" alt="">
+                        </div>
+                        <div class="clients__item">
+                            <img src="./img/clients/fa3.png" alt="">
+                        </div>
+                        <div class="clients__item">
+                            <img src="./img/clients/fa4.png" alt="">
+                        </div>
+                        <div class="clients__item">
+                            <img src="./img/clients/fa5.png" alt="">
+                        </div>
+                        <div class="clients__item">
+                            <img src="./img/clients/fa6.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <section class="page__subscribe subscribe">
+                <div class="subscribe__container _container">
+                    <div class="subscribe__body">
+                        <div class="subscribe__title">Subscribe For Latest
+                            Newsletter</div>
+                        <form action="#" class="subscribe_form">
+                            <input type="email" required placeholder="Your Email" class="subscribe__input">
+                            <button class="subscribe__button">Subscribe</button>
+                        </form>
                     </div>
                 </div>
             </section>
