--- a/index.html
+++ b/index.html
@@ -296,6 +296,57 @@
                     </div>
                 </div>
             </section>
+            <section class="page__getintouch getintouch">
+                <div class="getintouch__container _container">
+                    <div class="getintouch__heading heading-bloc">
+                        <div class="getintouch__title _title">Get In Touch</div>
+                        <div class="getintouch__text _text">Problems trying to resolve the conflict between <br>
+                            the two major realms of Classical physics: Newtonian mechanics
+                        </div>
+                    </div>
+                    <div class="getintouch__items">
+                        <div class="getintouch__item item-getintouch">
+                            <div class="item-getintouch__icon">
+                                <img src="./img/getintouch/icn1.svg" alt="icn">
+                            </div>
+                            <div class="item-getintouch__emails">
+                                <a href="mailty:georgia.young@example.com"
+                                    class="item-getintouch__email">georgia.young@example.com</a>
+                                <a href="mailty:georgia.young@ple.com"
+                                    class="item-getintouch__email">georgia.young@ple.com</a>
+                            </div>
+                            <div class="item-getintouch__label">Get Support</div>
+                            <a href="" class="item-getintouch__button">Submit Request</a>
+                        </div>
+                        <div class="getintouch__item item-getintouch item-getintouch_active">
+                            <div class="item-getintouch__icon">
+                                <img src="./img/getintouch/icn2.svg" alt="icn">
+                            </div>
+                            <div class="item-getintouch__emails">
+                                <a href="mailty:georgia.young@example.com"
+                                    class="item-getintouch__email">georgia.young@example.com</a>
+                                <a href="mailty:georgia.young@ple.com"
+                                    class="item-getintouch__email">georgia.young@ple.com</a>
+                            </div>
+                            <div class="item-getintouch__label">Get Support</div>
+                            <a href="" class="item-getintouch__button">Submit Request</a>
+                        </div>
+                        <div class="getintouch__item item-getintouch">
+                            <div class="item-getintouch__icon">
+                                <img src="./img/getintouch/icn3.svg" alt="icn">
+                            </div>
+                            <div class="item-getintouch__emails">
+                                <a href="mailty:georgia.young@example.com"
+                                    class="item-getintouch__email">georgia.young@example.com</a>
+                                <a href="mailty:georgia.young@ple.com"
+                                    class="item-getintouch__email">georgia.young@ple.com</a>
+                            </div>
+                            <div class="item-getintouch__label">Get Support</div>
+                            <a href="" class="item-getintouch__button">Submit Request</a>
+                        </div>
+                    </div>
+                </div>
+            </section>
 
         </main>
 
